Fixed horizontal overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 .wp-block-prettycode-code {
   border-radius: 6px;
-  overflow: hidden;
+  overflow-y: hidden;
   margin: 3em 0;
 
   &.alignfull {
